# AI_News

./: .gitignore  README.md  index.html  mira-tasks.md  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
.github/agents/: copilot-instructions.md
.github/prompts/: sync-notes.prompt.md  sync.prompt.md
.github/workflows/: generate.yml
.specify/memory/: constitution.md
specs/: backlog.md
specs/001-daily-news-aggregation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-featurename-fix-html/: spec.md
specs/003-featurename-sort-articles-age/: data-model.md  plan.md  quickstart.md  research.md  (+1 more)
src/: AI-News-20260226.html  AI-News-20260226.txt  AI-News-20260226_OLD.txt  AI-News-20260227.html  AI-News-20260302.html  AI-News-20260306.html  AI-News-20260308.html  AI-News-20260309.html  AI-News-20260310.html  AI-News-20260311.html  AI-News-20260312.html  AI-News-20260313.html  AI-News-20260314.html  AI-News-20260315.html  AI-News-20260316.html  AI-News-20260317.html  AI-News-20260318.html  AI-News-20260319.html  AI-News-20260320.html  AI-News-20260321.html  AI-News-20260322.html  AI-News-20260323.html  AI-News-20260324.html  AI-News-20260325.html  AI-News-20260326.html  AI-News-20260327.html  AI-News-20260328.html  AI-News-20260329.html  AI-News-20260330.html  AI-News-20260331.html  AI-News-20260401.html  AI-News-20260402.html  AI-News-20260403.html  AI-News-20260404.html  AI-News-20260405.html  AI-News-20260406.html  AI-News-20260407.html  AI-News-20260408.html  AI-News-20260409.html  AI-News-20260410.html  (+107 more)
(+45 files in other folders)
