[project]
name = "ai-daily-digest"
version = "1.0.0"
description = "Daily AI news aggregation CLI tool"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31,<3",
    "feedparser>=6.0,<7",
    "beautifulsoup4>=4.12,<5",
    "lxml>=5.0,<6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<8",
    "ruff>=0.1,<1",
]
podcast = [
    "yt-dlp>=2024.1,<2026",
    "faster-whisper>=1.0,<2",
]

[project.scripts]
ai-digest = "cli.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
